src/objects/Library_Item_Check_Out__c.object
<CustomObject>
    <description>History of Library Item Check Outs</description>
    <fields>
        <fullName>Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that checked out the library item</description>
        <label>Borrower</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Library_Item_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_In_Time__c</fullName>
        <description>The date and time the library item was checked in</description>
        <label>Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out_Status__c</fullName>
        <formula>IF (NOT(ISBLANK(Check_In_Time__c)), &quot;Checked In&quot;,
IF (Due_Back_Time__c &lt;= NOW(), &quot;Overdue&quot;,
&quot;Checked Out&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Out Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Out_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The date and time the library item was checked out</description>
        <label>Check Out Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Back_Time__c</fullName>
        <description>Date and time the library item is scheduled to be returned</description>
        <label>Due Back Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Checked_In__c</fullName>
        <formula>Check_Out_Status__c = &apos;Checked In&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Checked In?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Checked_Out__c</fullName>
        <formula>Check_Out_Status__c = &apos;Checked Out&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Checked Out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Overdue__c</fullName>
        <formula>Check_Out_Status__c = &apos;Overdue&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Overdue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Library_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to checked-out library item</description>
        <label>Library Item</label>
        <referenceTo>Library_Item__c</referenceTo>
        <relationshipLabel>Library Item Check Out</relationshipLabel>
        <relationshipName>Library_Item_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overdue_Trigger__c</fullName>
        <description>Trigger for business process that the library item is overdue</description>
        <label>Overdue Trigger</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Returned_Late__c</fullName>
        <formula>IF (ISBLANK(Check_In_Time__c), false, Check_In_Time__c &gt; Due_Back_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returned Late?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Tags_Formula__c</fullName>
        <formula>Borrower__r.FirstName + &apos; &apos; +
 Borrower__r.LastName  + &apos; &apos; +
 Borrower__r.Email + &apos; &apos; +
 Title__c + &apos; &apos; +
 Check_Out_Status__c + &apos; &apos; +
 IF (Returned_Late__c = true, &apos;Late&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Tags Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Tags__c</fullName>
        <label>Search Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Library_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Library Item Check Out</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Library_Item__c</columns>
        <columns>Borrower__c</columns>
        <columns>Check_Out_Status__c</columns>
        <columns>Check_Out_Time__c</columns>
        <columns>Due_Back_Time__c</columns>
        <columns>Check_In_Time__c</columns>
        <columns>Returned_Late__c</columns>
        <columns>Overdue_Trigger__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Checked_Out_and_Overdue</fullName>
        <columns>NAME</columns>
        <columns>Library_Item__c</columns>
        <columns>Borrower__c</columns>
        <columns>Check_Out_Status__c</columns>
        <columns>Check_Out_Time__c</columns>
        <columns>Due_Back_Time__c</columns>
        <columns>Check_In_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Check_Out_Status__c</field>
            <operation>notEqual</operation>
            <value>Checked In</value>
        </filters>
        <label>Checked Out and Overdue</label>
    </listViews>
    <nameField>
        <displayFormat>LIH-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Library Item Check Out</pluralLabel>
    <recordTypes>
        <fullName>Library_Item_Check_Out</fullName>
        <active>true</active>
        <label>Library Item Check Out</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Borrower_Required</fullName>
        <active>true</active>
        <description>A checkout must be associated with a borrower (user)</description>
        <errorConditionFormula>ISBLANK( Borrower__c )</errorConditionFormula>
        <errorDisplayField>Borrower__c</errorDisplayField>
        <errorMessage>A borrower must be selected</errorMessage>
    </validationRules>
</CustomObject>